--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
@@ -41,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@redux-devtools/core": "^3.13.1",
     "@types/styled-components": "^5.1.26",
     "react-router-dom": "^6.4.0",
     "styled-components": "^5.3.5"
