--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
   },
   "devDependencies": {
     "@redux-devtools/core": "^3.13.1",
+    "@types/json-server": "^0.14.4",
     "@types/styled-components": "^5.1.26",
+    "joi": "^17.6.0",
+    "json-server": "^0.17.0",
     "react-router-dom": "^6.4.0",
     "styled-components": "^5.3.5"
   }
