--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
@@ -51,6 +52,7 @@
     "joi": "^17.6.0",
     "json-server": "^0.17.0",
     "react-router-dom": "^6.4.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "react-loader-spinner": "^5.3.4"
   }
 }
