--- a/package.json
+++ b/package.json
@@ -49,10 +49,13 @@
     "@redux-devtools/core": "^3.13.1",
     "@types/json-server": "^0.14.4",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.24.0",
     "joi": "^17.6.0",
     "json-server": "^0.17.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.0",
-    "styled-components": "^5.3.5",
-    "react-loader-spinner": "^5.3.4"
+    "styled-components": "^5.3.5"
   }
 }
